--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -189,6 +189,7 @@ select.country {
     border-radius: 5px;
     margin: -20px auto -10px auto;
     width: 80%;
+    max-width: 1200px;
 }
 
 .heading h3 {
@@ -200,16 +201,27 @@ select.country {
     margin: 0 auto;
     padding: 0;
     width: 80%;
+    max-width: 1200px;
 }
 
 .summary p {
     padding: 20px 30px;
 }
 
+.full-page {
+    min-height: 300px;
+    height: 50%;
+    width: 87%;
+    /* max-width: 1200px; */
+    position: absolute;
+}
+
 #map {
     margin: 0 auto;
-    height: 450px;
+    /* height: 450px; */
+    height: 75%;
     width: 80%;
+    max-width: 1200px;
     position: relative;
 }
 
