--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,7 @@ h2, h3, h4 {
 }
 
 ol {
-    padding: 15px 0 18px 50px;
+    padding: 5px 0 18px 50px;
 }
 
 header {
@@ -168,6 +168,7 @@ select.country {
 
 .chart h3 {
     font-size: 1.4em;
+    padding-bottom: 10px;
 }
 
 .chart h4 {
